slurm_output/old/slurm-48420671.out
compute-a-16-65.o2.rc.hms.harvard.edu
  File "multithreading.py", line 50
    if queue!=none
                 ^
SyntaxError: invalid syntax
